--- a/build_tensorflow/configs/pi_one.conf
+++ b/build_tensorflow/configs/pi_one.conf
@@ -1,7 +1,5 @@
-# target support x86 / pi_one / pi2 / pi3 / beagle_black / cubietruck_v5 / banana_pipro / odroid_c1 / odroid_c2
-TF_BOARDMODEL_TARGET="pi2"
 TF_FIX_EIGEN_NEON_SUPPORT="yes"
-TF_PYTHON_VERSION="2.7"
+TF_PYTHON_VERSION="3.5"
 TF_VERSION="v1.3.0"
 TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0"
 BAZEL_VERSION="0.5.2"
@@ -9,7 +7,7 @@ BAZEL_VERSION="0.5.2"
 #BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 #BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 #BAZEL_APPLY_SUPPORT_AARCH64_PATCH="yes"
-BAZEL_COPT_FLAGS="--copt=-march=armv7-a --copt=-mfpu=neon-vfpv4 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
+BAZEL_COPT_FLAGS="--copt=-march=armv6 --copt=-mfpu=vfp"
 BAZEL_COPT_FLAGS+=" --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
 BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/arm-linux-gnueabihf --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
