--- a/build_tensorflow/configs/odroid_c1.conf
+++ b/build_tensorflow/configs/odroid_c1.conf
@@ -1,4 +1,4 @@
-TF_FIX_EIGEN_NEON_SUPPORT="yes"
+TF_PATCH="yes"
 TF_PYTHON_VERSION="3.5"
 TF_VERSION="v1.3.1"
 TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0"
@@ -6,7 +6,7 @@ BAZEL_VERSION="0.5.2"
 #BAZEL_AVALIABLE_RAM=1536 # MB
 #BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 #BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
-#BAZEL_APPLY_SUPPORT_AARCH64_PATCH="yes"
+#BAZEL_PATCH="yes"
 BAZEL_COPT_FLAGS="--copt=-mcpu=cortex-a5 --copt=-mfpu=neon-vfpv4 --copt=-mfloat-abi=hard  --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
 BAZEL_COPT_FLAGS+=" --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
 BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/arm-linux-gnueabihf --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
