--- a/build_tensorflow/configs/beagle_black.conf
+++ b/build_tensorflow/configs/beagle_black.conf
@@ -8,7 +8,7 @@ BAZEL_VERSION="0.5.2"
 #BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 #BAZEL_PATCH="yes"
 BAZEL_COPT_FLAGS="--copt=-march=armv7-a --copt=-mtune=cortex-a8 --copt=-mfpu=neon --copt=-mfloat-abi=hard --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
-BAZEL_COPT_FLAGS+=" --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
 BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/arm-linux-gnueabihf --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 CROSSTOOL_COMPILER="yes"
