--- a/build_tensorflow/configs/odroid_c2.conf
+++ b/build_tensorflow/configs/odroid_c2.conf
@@ -8,7 +8,7 @@ BAZEL_VERSION="0.5.2"
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 BAZEL_PATCH="yes"
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc --copt=-mtune=cortex-a53"
-BAZEL_COPT_FLAGS+=" --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
 BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/aarch64-linux-gnu/ --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 CROSSTOOL_COMPILER="yes"
