updated config files

--- a/build_tensorflow/configs/odroidc1.conf
+++ b/build_tensorflow/configs/odroidc1.conf
@@ -1,7 +1,7 @@
 TF_PATCH="yes"
 TF_PYTHON_VERSION="2.7"
 TF_VERSION="v1.3.1"
-TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0"
+TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0 TF_NEED_S3=0"
 BAZEL_VERSION="0.5.2"
 #BAZEL_AVALIABLE_RAM=1536 # MB
 #BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
