--- a/build_tensorflow/configs/rpi_one.conf
+++ b/build_tensorflow/configs/rpi_one.conf
@@ -1,13 +1,14 @@
 TF_PATCH="yes"
 TF_PYTHON_VERSION="3.5"
-TF_VERSION="v1.3.1"
+TF_VERSION="v1.4.0"
 TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0 TF_NEED_S3=0"
-BAZEL_VERSION="0.5.2"
+BAZEL_VERSION="0.5.4"
 #BAZEL_AVALIABLE_RAM=1536 # MB
 #BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 #BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 #BAZEL_PATCH="yes"
 BAZEL_COPT_FLAGS="--copt=-march=armv6 --copt=-mfpu=vfp"
+BAZEL_COPT_FLAGS+=" --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
 BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/arm-linux-gnueabihf --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
