--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -9,10 +9,9 @@ BAZEL_VERSION="0.5.4"
 BAZEL_PATCH="yes"
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a53"
 BAZEL_COPT_FLAGS+=" --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
-BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer"
-BAZEL_COPT_FLAGS+=" --copt=-isystem=/usr/include --copt=-isystem=/usr/include/aarch64-linux-gnu/ --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --copt=-DIS_MOBILE_PLATFORM"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 CROSSTOOL_COMPILER="yes"
-CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/4.9-2017.01/aarch64-linux-gnu/gcc-linaro-4.9.4-2017.01-x86_64_aarch64-linux-gnu.tar.xz"
-CROSSTOOL_DIR="gcc-linaro-4.9.4-2017.01-x86_64_aarch64-linux-gnu/"
+CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz"
+CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/"
 CROSSTOOL_NAME="aarch64-linux-gnu"
