config file more readable

--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -1,16 +1,32 @@
-TF_PATCH="yes"
+TF_PATCH="no"
 TF_PYTHON_VERSION="3.5"
-TF_VERSION="v1.4.0"
-TF_BUILD_VARS="TF_NEED_GDR=0 TF_NEED_GCP=0 TF_NEED_CUDA=0 TF_NEED_HDFS=0 TF_NEED_OPENCL=0 TF_NEED_VERBS=0 TF_NEED_MPI=0 TF_NEED_MKL=0 TF_NEED_JEMALLOC=1 TF_ENABLE_XLA=0 TF_NEED_S3=0"
+TF_VERSION="v1.4.1"
+
+# export tensorflow variables to configure
+TF_BUILD_VARS="TF_NEED_GDR=0"
+TF_BUILD_VARS+=" TF_NEED_GCP=0"
+TF_BUILD_VARS+=" TF_NEED_CUDA=0"
+TF_BUILD_VARS+=" TF_NEED_HDFS=0"
+TF_BUILD_VARS+=" TF_NEED_OPENCL=0"
+TF_BUILD_VARS+=" TF_NEED_VERBS=0"
+TF_BUILD_VARS+=" TF_NEED_MPI=0"
+TF_BUILD_VARS+=" TF_NEED_MKL=0"
+TF_BUILD_VARS+=" TF_NEED_JEMALLOC=1"
+TF_BUILD_VARS+=" TF_ENABLE_XLA=0"
+TF_BUILD_VARS+=" TF_NEED_S3=0"
+
 BAZEL_VERSION="0.5.4"
 # BAZEL_AVALIABLE_RAM=1536 # MB
 # BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
-BAZEL_PATCH="yes"
+# BAZEL_PATCH="yes"
+
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a53"
 BAZEL_COPT_FLAGS+=" --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
-BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
+BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
+
 CROSSTOOL_COMPILER="yes"
 CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz"
 CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/"
