--- a/build_tensorflow/configs/beagle_black.conf
+++ b/build_tensorflow/configs/beagle_black.conf
@@ -22,7 +22,7 @@ BAZEL_VERSION="0.5.4"
 # BAZEL_PATCH="yes"
 
 BAZEL_COPT_FLAGS="--copt=-march=armv7-a --copt=-mtune=cortex-a8 --copt=-mfpu=neon --copt=-mfloat-abi=hard"
-BAZEL_COPT_FLAGS+=" --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
+BAZEL_COPT_FLAGS+=" --copt=-std=c++11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
