--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -22,7 +22,7 @@ BAZEL_VERSION="0.5.4"
 # BAZEL_PATCH="yes"
 
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a53"
-BAZEL_COPT_FLAGS+=" --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
+BAZEL_COPT_FLAGS+=" --copt=-std=c++11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
