--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -4,7 +4,7 @@ OPENBLAS_PATH="/tmp/openblas_install"
 
 TF_PATCH="no"
 TF_PYTHON_VERSION="3.5"
-TF_VERSION="v1.5.0"
+TF_VERSION="v1.7.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
@@ -19,14 +19,14 @@ TF_BUILD_VARS+=" TF_NEED_JEMALLOC=1"
 TF_BUILD_VARS+=" TF_ENABLE_XLA=0"
 TF_BUILD_VARS+=" TF_NEED_S3=0"
 
-BAZEL_VERSION="0.5.4"
+BAZEL_VERSION="0.10.0"
 # BAZEL_AVALIABLE_RAM=1536 # MB
 # BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 # BAZEL_PATCH="yes"
 
 BAZEL_COPT_FLAGS="--copt=-march=armv6 --copt=-mfpu=vfp --copt=-DUSE_GEMM_FOR_CONV --copt=-DUSE_OPENBLAS"
-BAZEL_COPT_FLAGS+=" --copt=-std=c++11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
+BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
 BAZEL_COPT_FLAGS+=" --copt=-isystem --copt=${OPENBLAS_PATH}/include/ --linkopt=-L${OPENBLAS_PATH}/lib/ --linkopt=-l:libopenblas.a"
