--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -7,7 +7,7 @@ TF_BUILD_VARS="TF_NEED_GDR=0"
 TF_BUILD_VARS+=" TF_NEED_GCP=0"
 TF_BUILD_VARS+=" TF_NEED_CUDA=0"
 TF_BUILD_VARS+=" TF_NEED_HDFS=0"
-TF_BUILD_VARS+=" TF_NEED_OPENCL=0"
+TF_BUILD_VARS+=" TF_NEED_OPENCL_SYCL=0"
 TF_BUILD_VARS+=" TF_NEED_VERBS=0"
 TF_BUILD_VARS+=" TF_NEED_MPI=0"
 TF_BUILD_VARS+=" TF_NEED_MKL=0"
