tensorflow version to 1.8. added patch for fix building libpng without neon.

--- a/build_tensorflow/configs/beagle_black.conf
+++ b/build_tensorflow/configs/beagle_black.conf
@@ -1,6 +1,6 @@
-TF_PATCH="no"
+TF_PATCH="yes"
 TF_PYTHON_VERSION="3.5"
-TF_VERSION="v1.7.0"
+TF_VERSION="v1.8.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
