--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -2,9 +2,9 @@
 # see: https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/ci_build/pi/build_raspberry_pi.sh
 OPENBLAS_PATH="/tmp/openblas_install"
 
-TF_PATCH="yes"
+TF_PATCH="no"
 TF_PYTHON_VERSION="3.5"
-TF_VERSION="v1.8.0"
+TF_VERSION="v1.9.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
