--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -4,6 +4,7 @@ TF_VERSION="v1.10.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
+TF_BUILD_VARS+=" TF_NEED_AWS=0"
 TF_BUILD_VARS+=" TF_NEED_GCP=0"
 TF_BUILD_VARS+=" TF_NEED_CUDA=0"
 TF_BUILD_VARS+=" TF_NEED_HDFS=0"
