--- a/build_tensorflow/configs/odroidc1.conf
+++ b/build_tensorflow/configs/odroidc1.conf
@@ -34,3 +34,4 @@ CROSSTOOL_COMPILER="yes"
 CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/arm-linux-gnueabihf/gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf.tar.xz"
 CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf/"
 CROSSTOOL_NAME="arm-linux-gnueabihf"
+CROSSTOOL_WHEEL_ARCH="linux_armv7l"
