--- a/build_tensorflow/configs/odroidc2.conf
+++ b/build_tensorflow/configs/odroidc2.conf
@@ -32,3 +32,4 @@ CROSSTOOL_COMPILER="yes"
 CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz"
 CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/"
 CROSSTOOL_NAME="aarch64-linux-gnu"
+CROSSTOOL_WHEEL_ARCH="linux_aarch64"
