--- a/build_tensorflow/Dockerfile
+++ b/build_tensorflow/Dockerfile
@@ -18,7 +18,8 @@ RUN echo "deb http://httpredir.debian.org/debian/ jessie main contrib non-free" 
 RUN pip install -U --user keras_applications==1.0.5 --no-deps \
     && pip install -U --user keras_preprocessing==1.0.3 --no-deps \
     && pip3 install -U --user keras_applications==1.0.5 --no-deps \
-    && pip3 install -U --user keras_preprocessing==1.0.3 --no-deps
+    && pip3 install -U --user keras_preprocessing==1.0.3 --no-deps \
+    && ldconfig
 
 WORKDIR /root
 RUN git clone https://github.com/lhelontra/tensorflow-on-arm/
