Fixes and backports for v1.12 from https://github.com/jackmitch/tensorflow-on-arm

--- a/build_tensorflow/configs/beagle_black.conf
+++ b/build_tensorflow/configs/beagle_black.conf
@@ -1,4 +1,4 @@
-TF_PATCH="no"
+TF_PATCH="yes"
 TF_VERSION="v1.12.0"
 
 # export tensorflow variables to configure
@@ -14,6 +14,8 @@ TF_BUILD_VARS+=" TF_NEED_MKL=0"
 TF_BUILD_VARS+=" TF_NEED_JEMALLOC=1"
 TF_BUILD_VARS+=" TF_ENABLE_XLA=0"
 TF_BUILD_VARS+=" TF_NEED_S3=0"
+TF_BUILD_VARS+=" TF_NEED_IGNITE=0"
+TF_BUILD_VARS+=" TF_NEED_ROCM=0"
 
 BAZEL_VERSION="0.15.0"
 # BAZEL_AVALIABLE_RAM=1536 # MB
@@ -27,6 +29,7 @@ BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
+BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite"
 
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
