--- a/build_tensorflow/configs/hikey960.conf
+++ b/build_tensorflow/configs/hikey960.conf
@@ -1,5 +1,4 @@
 TF_PATCH="yes"
-TF_PYTHON_VERSION="3.5"
 TF_VERSION="v1.12.0"
 
 # export tensorflow variables to configure
@@ -15,6 +14,8 @@ TF_BUILD_VARS+=" TF_NEED_MKL=0"
 TF_BUILD_VARS+=" TF_NEED_JEMALLOC=1"
 TF_BUILD_VARS+=" TF_ENABLE_XLA=0"
 TF_BUILD_VARS+=" TF_NEED_S3=0"
+TF_BUILD_VARS+=" TF_NEED_IGNITE=0"
+TF_BUILD_VARS+=" TF_NEED_ROCM=0"
 
 BAZEL_VERSION="0.15.0"
 # BAZEL_AVALIABLE_RAM=1536 # MB
@@ -25,6 +26,7 @@ BAZEL_VERSION="0.15.0"
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a73.cortex-a53"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --copt=-D_GLIBCXX_USE_CXX11_ABI=0"
+BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite"
 BAZEL_EXTRA_FLAGS=" --cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package //tensorflow:libtensorflow_cc.so //tensorflow:libtensorflow.so"
 
 CROSSTOOL_COMPILER="yes"
