--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -2,7 +2,7 @@
 # see: https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/ci_build/pi/build_raspberry_pi.sh
 OPENBLAS_PATH="/tmp/openblas_install"
 
-TF_PATCH="no"
+TF_PATCH="yes"
 TF_VERSION="v1.12.0"
 
 # export tensorflow variables to configure
@@ -18,6 +18,8 @@ TF_BUILD_VARS+=" TF_NEED_MKL=0"
 TF_BUILD_VARS+=" TF_NEED_JEMALLOC=1"
 TF_BUILD_VARS+=" TF_ENABLE_XLA=0"
 TF_BUILD_VARS+=" TF_NEED_S3=0"
+TF_BUILD_VARS+=" TF_NEED_IGNITE=0"
+TF_BUILD_VARS+=" TF_NEED_ROCM=0"
 
 BAZEL_VERSION="0.15.0"
 # BAZEL_AVALIABLE_RAM=1536 # MB
@@ -30,6 +32,7 @@ BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
 BAZEL_COPT_FLAGS+=" --copt=-isystem --copt=${OPENBLAS_PATH}/include/ --linkopt=-L${OPENBLAS_PATH}/lib/ --linkopt=-l:libopenblas.a"
+BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
