tests for next tf release

--- a/build_tensorflow/configs/rpi.conf
+++ b/build_tensorflow/configs/rpi.conf
@@ -1,5 +1,5 @@
 TF_PATCH="yes"
-TF_VERSION="v1.12.0"
+TF_VERSION="v1.13.0-rc2"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
@@ -23,7 +23,7 @@ BAZEL_VERSION="0.18.0"
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 # BAZEL_PATCH="yes"
 
-BAZEL_COPT_FLAGS="--copt=-march=armv7-a --copt=-mfpu=neon-vfpv4 --copt=-mfloat-abi=hard"
+BAZEL_COPT_FLAGS="--copt=-march=armv7-a --copt=-mfpu=neon-vfpv4 --copt=-mfloat-abi=hard --copt=-O3"
 BAZEL_COPT_FLAGS+=" --copt=-std=c++11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
