--- a/build_tensorflow/configs/hikey960.conf
+++ b/build_tensorflow/configs/hikey960.conf
@@ -1,5 +1,5 @@
 TF_PATCH="yes"
-TF_VERSION="v1.12.0"
+TF_VERSION="v1.13.0-rc2"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
@@ -23,7 +23,7 @@ BAZEL_VERSION="0.18.0"
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
 # BAZEL_PATCH="yes"
 
-BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a73.cortex-a53"
+BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a73.cortex-a53 --copt=-O3"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --copt=-D_GLIBCXX_USE_CXX11_ABI=0"
 BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite"
