--- a/build_tensorflow/configs/odroidc1.conf
+++ b/build_tensorflow/configs/odroidc1.conf
@@ -33,7 +33,7 @@ BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokaf
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
-CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/arm-linux-gnueabihf/gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf.tar.xz"
-CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_arm-linux-gnueabihf/"
+CROSSTOOL_URL="https://developer.arm.com/-/media/Files/downloads/gnu-a/8.2-2019.01/gcc-arm-8.2-2019.01-x86_64-arm-linux-gnueabihf.tar.xz"
+CROSSTOOL_DIR="gcc-arm-8.2-2019.01-x86_64-arm-linux-gnueabihf/"
 CROSSTOOL_NAME="arm-linux-gnueabihf"
 CROSSTOOL_WHEEL_ARCH="linux_armv7l"
