--- a/build_tensorflow/configs/hikey960.conf
+++ b/build_tensorflow/configs/hikey960.conf
@@ -30,7 +30,7 @@ BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokaf
 BAZEL_EXTRA_FLAGS=" --cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package //tensorflow:libtensorflow_cc.so //tensorflow:libtensorflow.so"
 
 CROSSTOOL_COMPILER="yes"
-CROSSTOOL_URL="https://releases.linaro.org/components/toolchain/binaries/6.3-2017.05/aarch64-linux-gnu/gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu.tar.xz"
-CROSSTOOL_DIR="gcc-linaro-6.3.1-2017.05-x86_64_aarch64-linux-gnu/"
+CROSSTOOL_URL="https://developer.arm.com/-/media/Files/downloads/gnu-a/8.2-2018.08/gcc-arm-8.2-2018.08-x86_64-aarch64-linux-gnu.tar.xz"
+CROSSTOOL_DIR="gcc-arm-8.2-2018.08-x86_64-aarch64-linux-gnu/"
 CROSSTOOL_NAME="aarch64-linux-gnu"
 CROSSTOOL_WHEEL_ARCH="linux_aarch64"
