--- a/build_tensorflow/configs/rpi_one.conf
+++ b/build_tensorflow/configs/rpi_one.conf
@@ -1,5 +1,5 @@
 TF_PATCH="yes"
-TF_VERSION="v1.13.0-rc2"
+TF_VERSION="v1.13.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
