building with libpng works as well.

--- a/build_tensorflow/Dockerfile
+++ b/build_tensorflow/Dockerfile
@@ -2,7 +2,7 @@ FROM debian:stretch
 
 RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
     && apt-get update && apt-get install -y \
-        openjdk-8-jdk automake autoconf \
+        openjdk-8-jdk automake autoconf libpng-dev \
         curl zip unzip libtool swig zlib1g-dev pkg-config git g++ wget xz-utils \
         python-numpy python-pip python-mock \
         python3-numpy python3-pip python3-mock \
@@ -10,11 +10,6 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         libpython-dev:armhf libpython-all-dev:armhf libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython-dev:arm64 libpython-all-dev:arm64 libpython3-dev:arm64 libpython3-all-dev:arm64
 
-RUN echo "deb http://httpredir.debian.org/debian/ jessie main contrib non-free" > /etc/apt/sources.list.d/jessie.list \
-    && apt-get update && apt-get install -y libpng12-dev \
-    && rm -f /etc/apt/sources.list.d/jessie.list \
-    && rm -rf /var/lib/apt/lists/*
-    
 RUN echo "deb http://httpredir.debian.org/debian/ buster main contrib non-free" > /etc/apt/sources.list.d/buster.list \
     && apt-get update && apt-get install -y gcc-8 g++-8 \
     && ln -sf /usr/bin/g++-8 /usr/bin/g++ \
