--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -1,5 +1,4 @@
-# use openblas for pione,
-# see: https://github.com/tensorflow/tensorflow/blob/master/tensorflow/tools/ci_build/pi/build_raspberry_pi.sh
+# using openblas for pi-{one,zero}
 OPENBLAS_PATH="/tmp/openblas_install"
 
 TF_PATCH="yes"
