change stretch to buster repository

--- a/build_tensorflow/Dockerfile
+++ b/build_tensorflow/Dockerfile
@@ -1,4 +1,4 @@
-FROM debian:stretch
+FROM debian:buster
 
 RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
     && apt-get update && apt-get install -y \
@@ -10,9 +10,8 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         libpython-dev:armhf libpython-all-dev:armhf libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython-dev:arm64 libpython-all-dev:arm64 libpython3-dev:arm64 libpython3-all-dev:arm64
 
-# NOTE: forcing gcc 4.9 as default (prevents internal compiler error: in emit_move_insn, at expr.c bug in gcc-6 of stretch)
 RUN echo "deb http://httpredir.debian.org/debian/ jessie main contrib non-free" > /etc/apt/sources.list.d/jessie.list \
-    && apt-get update && apt-get install -y --allow-downgrades g++=4:4.9.2-2 gcc=4:4.9.2-2 \
+    && apt-get update && apt-get install -y g++ gcc \
     && rm -f /etc/apt/sources.list.d/jessie.list \
     && rm -rf /var/lib/apt/lists/*
 
