--- a/build_tensorflow/Dockerfile
+++ b/build_tensorflow/Dockerfile
@@ -5,7 +5,7 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
         openjdk-11-jdk automake autoconf libpng-dev \
         curl zip unzip libtool swig zlib1g-dev pkg-config git wget xz-utils \
         python-numpy python-pip python-mock \
-        python3-numpy python3-pip python3-mock \
+        python3-numpy python3-pip python3-mock python-future \
         libpython-dev libpython-all-dev libpython3-dev libpython3-all-dev \
         libpython-dev:armhf libpython-all-dev:armhf libpython3-dev:armhf libpython3-all-dev:armhf \
         libpython-dev:arm64 libpython-all-dev:arm64 libpython3-dev:arm64 libpython3-all-dev:arm64 g++ gcc
