--- a/build_tensorflow/Dockerfile.stretch
+++ b/build_tensorflow/Dockerfile.stretch
@@ -4,7 +4,7 @@ RUN dpkg --add-architecture armhf && dpkg --add-architecture arm64 \
     && apt-get update && apt-get install -y \
         openjdk-8-jdk automake autoconf libpng-dev \
         curl zip unzip libtool swig zlib1g-dev pkg-config git wget xz-utils \
-        python-numpy python-pip python-mock \
+        python-numpy python-pip python-mock python-future \
         python3-numpy python3-pip python3-mock \
         libpython-dev libpython-all-dev libpython3-dev libpython3-all-dev \
         libpython-dev:armhf libpython-all-dev:armhf libpython3-dev:armhf libpython3-all-dev:armhf \
