upgrade to version 2.0

--- a/build_tensorflow/configs/hikey960.conf
+++ b/build_tensorflow/configs/hikey960.conf
@@ -1,5 +1,5 @@
 TF_PATCH="yes"
-TF_VERSION="v1.14.0"
+TF_VERSION="v2.0.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
@@ -26,7 +26,7 @@ BAZEL_VERSION="0.24.1"
 BAZEL_COPT_FLAGS="--copt=-march=armv8-a+crc+simd --copt=-mtune=cortex-a73.cortex-a53 --copt=-O3 --copt=-flax-vector-conversions"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --copt=-D_GLIBCXX_USE_CXX11_ABI=0"
-BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite --define tensorflow_mkldnn_contraction_kernel=0"
+BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --config=noignite --define tensorflow_mkldnn_contraction_kernel=0"
 BAZEL_EXTRA_FLAGS=" --cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package //tensorflow:libtensorflow_cc.so //tensorflow:libtensorflow.so"
 
 CROSSTOOL_COMPILER="yes"
