--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -2,7 +2,7 @@
 OPENBLAS_PATH="/tmp/openblas_install"
 
 TF_PATCH="yes"
-TF_VERSION="v1.14.0"
+TF_VERSION="v2.0.0"
 
 # export tensorflow variables to configure
 TF_BUILD_VARS="TF_NEED_GDR=0"
@@ -31,7 +31,7 @@ BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
 BAZEL_COPT_FLAGS+=" --copt=-isystem --copt=${OPENBLAS_PATH}/include/ --linkopt=-L${OPENBLAS_PATH}/lib/ --linkopt=-l:libopenblas.a"
-BAZEL_COPT_FLAGS+=" --config=noaws --config=nogcp --config=nohdfs --config=nokafka --config=noignite --define tensorflow_mkldnn_contraction_kernel=0"
+BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --config=noignite --define tensorflow_mkldnn_contraction_kernel=0"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
