--- a/build_tensorflow/configs/nitrogen6x.conf
+++ b/build_tensorflow/configs/nitrogen6x.conf
@@ -29,7 +29,7 @@ BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_1"
 BAZEL_COPT_FLAGS+=" --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_2 --copt=-U__GCC_HAVE_SYNC_COMPARE_AND_SWAP_8"
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI"
-BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --config=noignite --define tensorflow_mkldnn_contraction_kernel=0"
+BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
 
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=//tools/local_arm_compiler:toolchain //tensorflow/tools/pip_package:build_pip_package"
 
