--- a/build_tensorflow/configs/rpi_one_openblas.conf
+++ b/build_tensorflow/configs/rpi_one_openblas.conf
@@ -28,7 +28,7 @@ BAZEL_VERSION="0.29.1"
 
 BAZEL_COPT_FLAGS="--copt=-march=armv6 --copt=-mfpu=vfp --copt=-DUSE_GEMM_FOR_CONV --copt=-DUSE_OPENBLAS"
 BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
-BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-fpermissive"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --noincompatible_strict_action_env"
 BAZEL_COPT_FLAGS+=" --copt=-isystem --copt=${OPENBLAS_PATH}/include/ --linkopt=-L${OPENBLAS_PATH}/lib/ --linkopt=-l:libopenblas.a"
 BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
