--- a/build_tensorflow/configs/rpi_one.conf
+++ b/build_tensorflow/configs/rpi_one.conf
@@ -25,7 +25,7 @@ BAZEL_VERSION="0.29.1"
 
 BAZEL_COPT_FLAGS="--copt=-march=armv6 --copt=-mfpu=vfp"
 BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE=S_IWUSR"
-BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations"
+BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-fpermissive"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --noincompatible_strict_action_env"
 BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=@local_config_arm_compiler//:toolchain //tensorflow:libtensorflow.so //tensorflow:libtensorflow_framework.so //tensorflow/tools/pip_package:build_pip_package"
