change bazel version to 3.1.0 compile tflite with xnnpack

--- a/build_tensorflow/configs/rpi_one.conf
+++ b/build_tensorflow/configs/rpi_one.conf
@@ -17,7 +17,7 @@ TF_BUILD_VARS+=" TF_NEED_S3=0"
 TF_BUILD_VARS+=" TF_NEED_IGNITE=0"
 TF_BUILD_VARS+=" TF_NEED_ROCM=0"
 
-BAZEL_VERSION="2.0.0"
+BAZEL_VERSION="3.1.0"
 # BAZEL_AVALIABLE_RAM=1536 # MB
 # BAZEL_AVALIABLE_CPU=0.5  # number of cpu cores (1.0 epresenting single full core)
 # BAZEL_AVALIABLE_IO=1.0   # workstation I/O capability (with 1.0 representing average workstation)
@@ -28,6 +28,7 @@ BAZEL_COPT_FLAGS+=" --copt=-std=gnu11 --copt=-DS_IREAD=S_IRUSR --copt=-DS_IWRITE
 BAZEL_COPT_FLAGS+=" --config=monolithic --copt=-funsafe-math-optimizations --copt=-fpermissive"
 BAZEL_COPT_FLAGS+=" --copt=-ftree-vectorize --copt=-fomit-frame-pointer --copt=-DRASPBERRY_PI --noincompatible_strict_action_env"
 BAZEL_COPT_FLAGS+=" --config=v2 --config=noaws --config=nohdfs --define tensorflow_mkldnn_contraction_kernel=0"
+BAZEL_COPT_FLAGS+=" --define=tflite_pip_with_flex=true --define=tflite_with_xnnpack=true"
 BAZEL_EXTRA_FLAGS="--cpu=armeabi --crosstool_top=@local_config_arm_compiler//:toolchain //tensorflow:libtensorflow.so //tensorflow:libtensorflow_framework.so //tensorflow/tools/pip_package:build_pip_package"
 
 CROSSTOOL_COMPILER="yes"
