added portpicker package

--- a/build_tensorflow/Dockerfile.stretch
+++ b/build_tensorflow/Dockerfile.stretch
@@ -17,6 +17,7 @@ RUN echo "deb http://ftp.us.debian.org/debian/ buster main contrib non-free" > /
 
 RUN pip3 install -U --user keras_applications==1.0.8 --no-deps \
     && pip3 install -U --user keras_preprocessing==1.1.0 --no-deps \
+    && pip3 install portpicker \
     && ldconfig
 
 RUN /bin/bash -c "update-alternatives --install /usr/bin/python python /usr/bin/python3 150"
